comfyui.prev.log
** ComfyUI start up time: 2023-10-24 17:35:57.378678

Prestartup times for custom nodes:
   0.0 seconds: D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\ComfyUI-Manager

Using directml with device: 
Total VRAM 1024 MB, total RAM 32699 MB
Set vram state to: NORMAL_VRAM
Device: privateuseone
VAE dtype: torch.float32
Using sub quadratic optimization for cross attention, if you have memory or speed issues try using: --use-split-cross-attention
========= custom_node_path D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes =========
========= possible_module base64_images.py =========
========= possible_module comfyui-animatediff =========
Traceback (most recent call last):
  File "D:\Documents\projects\super-puper-ai\ComfyUI\nodes.py", line 1735, in load_custom_node
    module_spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 850, in exec_module
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\comfyui-animatediff\__init__.py", line 2, in <module>
    from .animatediff.nodes import NODE_CLASS_MAPPINGS, NODE_DISPLAY_NAME_MAPPINGS
  File "D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\comfyui-animatediff\animatediff\nodes.py", line 16, in <module>
    from .sampler import AnimateDiffSampler, AnimateDiffSlidingWindowOptions
  File "D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\comfyui-animatediff\animatediff\sampler.py", line 14, in <module>
    from .sliding_schedule import ContextSchedules
  File "D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\comfyui-animatediff\animatediff\sliding_schedule.py", line 147
    match name:
          ^
SyntaxError: invalid syntax

Cannot import D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\comfyui-animatediff module for custom nodes: invalid syntax (sliding_schedule.py, line 147)
========= possible_module ComfyUI-AnimateDiff-Evolved =========
Using sub quadratic optimization for cross attention, if you have memory or speed issues try using: --use-split-cross-attention
========= possible_module ComfyUI-Impact-Pack =========
### Loading: ComfyUI-Impact-Pack (V4.26.1)
## ComfyUI-Impact-Pack: Updating dependencies
### ComfyUI-Impact-Pack: Check dependencies
### ComfyUI-Impact-Pack: Check basic models
### ComfyUI-Impact-Pack: Updating subpack
### ComfyUI-Impact-Pack: onnx model directory created (D:\Documents\projects\super-puper-ai\ComfyUI\models\onnx)
### Loading: ComfyUI-Impact-Pack (Subpack: V0.2.4)
========= possible_module ComfyUI-Manager =========
### Loading: ComfyUI-Manager (V0.36)


## [WARN] ComfyUI-Manager: Your ComfyUI version (1) is too old. Please update to the latest version. ##


### ComfyUI Revision: 1 [9d5a2a3b] | Released on '2023-10-24'
========= possible_module ComfyUI-VideoHelperSuite =========
[VideoHelperSuite] - [0;32mINFO[0m - ffmpeg could not be found. Using ffmpeg from imageio-ffmpeg.
========= possible_module example_node.py.example =========

Import times for custom nodes:
   0.0 seconds: D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\base64_images.py
   0.0 seconds (IMPORT FAILED): D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\comfyui-animatediff
   0.0 seconds: D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\ComfyUI-AnimateDiff-Evolved
   0.2 seconds: D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\ComfyUI-Manager
   0.2 seconds: D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\ComfyUI-VideoHelperSuite
  23.9 seconds: D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\ComfyUI-Impact-Pack

Starting server

To see the GUI go to: http://0.0.0.0:8189
FETCH DATA from: D:\Documents\projects\super-puper-ai\ComfyUI\custom_nodes\ComfyUI-Manager\extension-node-map.json
[AnimateDiffEvo] - [0;33mWARNING[0m - ffmpeg could not be found. Outputs that require it have been disabled
FETCH DATA from: https://raw.githubusercontent.com/ltdrdata/ComfyUI-Manager/main/custom-node-list.json
Uninstall custom node 'ComfyUI Impact Pack'
uninstall: ['https://github.com/ltdrdata/ComfyUI-Impact-Pack']
Uninstallation was successful.
After restarting ComfyUI, please refresh the browser.
FETCH DATA from: https://raw.githubusercontent.com/ltdrdata/ComfyUI-Manager/main/custom-node-list.json

Stopped server
